Fix card font weight to improve readability

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -305,10 +305,6 @@ $shape-count: 8;
 //////////////////////////
 //  Bootstrap Overrides //
 //////////////////////////
-.card-text:last-child {
-  font-weight: 100;
-}
-
 .card {
   border-color: #FFF;
 }
